...
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_tv_24"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_baseline_movie_24"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_favorite"
        android:title="@string/title_notifications" />
</menu>
